--- a/setup/index.html
+++ b/setup/index.html
@@ -22,8 +22,8 @@
           <div class="img-container">
             <img src="" alt="" />
           </div>
-          <h4 id="author">nan shata</h4>
-          <p id="job">shata thari</p>
+          <h4 id="author">something is not right</h4>
+          <p id="job">okk</p>
           <p id="info">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
             accusamus alias atque quibusdam suscipit quis placeat! Veniam dolore
@@ -37,6 +37,7 @@
             <button class="next-btn">
               <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
             </button>
+            <img src="" alt="" />
           </div>
           <button class="random-btn">random</button>
         </article>
